@@ -12,7 +12,6 @@ import java.awt.event.ActionListener;
 import java.awt.event.MouseAdapter;
 import java.awt.event.MouseEvent;
 import java.awt.event.MouseListener;
-import java.awt.event.WindowEvent;
 import java.beans.PropertyChangeEvent;
 import java.beans.PropertyChangeListener;
 import java.io.BufferedReader;
@@ -21,10 +20,7 @@ import java.io.File;
 import java.io.FileReader;
 import java.io.FileWriter;
 import java.io.IOException;
-import java.net.MalformedURLException;
 import java.net.URI;
-import java.net.URISyntaxException;
-import java.net.URL;
 import java.util.Collection;
 import java.util.HashSet;
 import java.util.Locale;
@@ -65,7 +61,6 @@ import javax.swing.JTextArea;
 import javax.swing.JTextField;
 import javax.swing.JTree;
 import javax.swing.ListSelectionModel;
-import javax.swing.SwingUtilities;
 import javax.swing.ToolTipManager;
 import javax.swing.event.ListSelectionEvent;
 import javax.swing.event.ListSelectionListener;
@@ -176,7 +171,8 @@ public class AlignmentGUI extends JFrame implements TreeSelectionListener {
 	/** the label of reference bar */
 	private JLabel refText1 = new JLabel(REF_PREFIX_1);
 	private JLabel refText2 = new JLabel(REF_PREFIX_2);
-
+	
+	
 	/** Lexicalisation panel */
 	LexicalisationPanel lexic1 = null;
 	LexicalisationPanel lexic2 = null;
@@ -186,6 +182,11 @@ public class AlignmentGUI extends JFrame implements TreeSelectionListener {
 	AnnotationPanel annot1 = null;
 	AnnotationPanel annot2 = null;
 
+	/***
+	 * label
+	 */
+	LabelMethodParameterDialog labelParameterDialog = null;
+	
 	/** Memoire du dernier dossier ou j'ai ouvert un truc */
 	private File lastDirectory = null;
 
@@ -879,14 +880,8 @@ public class AlignmentGUI extends JFrame implements TreeSelectionListener {
 			public void actionPerformed(ActionEvent e) {
 				// TODO Auto-generated method stub
 				try {
-					Desktop.getDesktop().browse(new URL("https://github.com/lmazuel/onagui/issues").toURI());
-				} catch (MalformedURLException e1) {
-					// TODO Auto-generated catch block
-					e1.printStackTrace();
+					Desktop.getDesktop().browse(URI.create("https://github.com/lmazuel/onagui/issues"));
 				} catch (IOException e1) {
-					// TODO Auto-generated catch block
-					e1.printStackTrace();
-				} catch (URISyntaxException e1) {
 					// TODO Auto-generated catch block
 					e1.printStackTrace();
 				}
@@ -1697,12 +1692,11 @@ public class AlignmentGUI extends JFrame implements TreeSelectionListener {
 			// Assume que c'est JOptionPane.OK_OPTION
 			final boolean useRoot1 = rootChooserDialog.isUseRootFor1();
 			final boolean useRoot2 = rootChooserDialog.isUseRootFor2();
-
 			// Si je suis une methode label, j'ai des parametres générique à donner
 			if(method instanceof LabelAlignmentMethod) {
 				LabelAlignmentMethod labelMethod = (LabelAlignmentMethod)method;
 
-				LabelMethodParameterDialog labelParameterDialog = new LabelMethodParameterDialog(
+				 labelParameterDialog = new LabelMethodParameterDialog(
 						AlignmentGUI.this,
 						labelMethod.getThreshold(),
 						alignmentControler.getLanguagesUsedInOnto(1),
@@ -1715,8 +1709,9 @@ public class AlignmentGUI extends JFrame implements TreeSelectionListener {
 				labelMethod.setThreshold(newThreshold);
 				labelMethod.setLangsFrom1(labelParameterDialog.getSelectedLangFor1());
 				labelMethod.setLangsFrom2(labelParameterDialog.getSelectedLangFor2());
+	
 			}
-
+			
 			// Map<OWLEntity, Set<Mapping<OWLEntity, SKOSConcept>>> return type
 			FutureTask<Alignment<ONTORES1, ONTORES2>> task = new FutureTask<Alignment<ONTORES1, ONTORES2>>(
 					new Callable<Alignment<ONTORES1, ONTORES2>>() {
@@ -1744,8 +1739,13 @@ public class AlignmentGUI extends JFrame implements TreeSelectionListener {
 									System.err.println("Pas de noeud sélectionné dans l'arbre 2, j'envoie la racine pour l'alignement"); //$NON-NLS-1$
 									selected2 = (DefaultMutableTreeNode)treeFrom2.getModel().getRoot();
 								}
-
-								alignmentControler.computeAndAddMapping(method, listener, selected1, selected2);
+								try {
+									System.out.println(labelParameterDialog.getDate1AsDate().get()+"and "+labelParameterDialog.getDate2AsDate().get());
+									alignmentControler.computeAndAddMapping(method, listener, selected1, selected2,labelParameterDialog.getDate1AsDate(),labelParameterDialog.getDate2AsDate());
+								} catch (Exception e) {
+									// TODO Auto-generated catch block
+									e.printStackTrace();
+								}
 							}
 
 							progressBar.setVisible(false);
